--- a/InSb.ipynb
+++ b/InSb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,37 +14,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook"
+    "%matplotlib ipympl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = 2*10**-6"
+    "t = 2.0*10**-6\n",
+    "tErr = 0.05*10**-6\n",
+    "d = 1.0*10**-3\n",
+    "D = 6.5*10**-3\n",
+    "rhoGeoErr = -8.5*(d/D)**4\n",
+    "RhGeoErr = -4.4*(d/D)**2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  3.93         3.93666667   3.93         3.93333333  10.94333333\n",
-      "  10.94333333  10.93666667  10.93333333]\n",
-      "[ 7.07        7.04666667  7.03333333  7.04      ]\n"
+      "0.153846153846\n",
+      "-0.00476173803438\n",
+      "-0.104142011834\n"
      ]
     }
    ],
+   "source": [
+    "print d/D\n",
+    "print rhoGeoErr\n",
+    "print RhGeoErr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Sheet resistance measurements\n",
     "V1 = np.array([11.79, 11.81, 11.79, 11.80,\n",
@@ -56,27 +72,8 @@
     "# Sheet resistance\n",
     "R1 = V1/I\n",
     "# Hall resistance\n",
-    "R2 = V2/I\n",
-    "\n",
-    "print R1\n",
-    "print R2"
+    "R2 = V2/I"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = 20"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -121,100 +118,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Ra = np.average(R1[4:-1])\n",
+    "Ra = np.average(R1[4:])\n",
+    "RaErr = 0.005*np.sqrt(4)\n",
     "Rb = np.average(R1[0:4])\n",
-    "ratio = 32.81/11.79"
+    "RbErr = 0.005*np.sqrt(4)\n",
+    "ratio = 32.81/11.79\n",
+    "ratioErr = ratio * np.sqrt( (RaErr/Ra)**2 + (RbErr/Rb)**2 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Equation to solve for value of f\n",
     "def f(y, x=1.408):\n",
     "    return np.cosh((x-1)/(x+1) * np.log(2)/y) - 0.5*np.exp(np.log(2)/y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Solution for f\n",
     "x0 = ratio\n",
-    "z = spo.brentq(f, 0.01, 0.99, (x0))"
+    "z = spo.brentq(f, 0.8, 0.99, (x0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rho = 6.18739360222e-05 Ohm m\n",
-      "sigma = 16161.8940751 W / K*m\n"
+      "rho = 6.19e-05 +/- 1.57e-06 Ohm m\n",
+      "sigma = 16164.0072145(Ohm m)^-1\n",
+      "R_sh = 30.93 +/- 1.41e-02\n"
      ]
     }
    ],
    "source": [
+    "# Calculating sheet resistance and resistivity\n",
     "R_sh = (np.pi / np.log(2)) * ((Ra+Rb)/2) * z\n",
+    "R_shErr = np.sqrt(RaErr**2 + RbErr**2)\n",
     "rho = R_sh * t\n",
-    "print 'rho = ' + str(rho)+' Ohm m'\n",
-    "print 'sigma = ' + str(rho**-1)+' W / K*m'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "161.61894075091254"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1 / (rho*100)"
+    "rhoMeasErr = rho * np.sqrt( (R_shErr/R_sh)**2 + (tErr/t)**2 )\n",
+    "rhoErr = np.sqrt((rhoMeasErr)**2 + (rhoGeoErr*rho)**2)\n",
+    "print 'rho = {:.2e} +/- {:.2e} Ohm m'.format(rho, rhoErr)\n",
+    "print 'sigma = ' + str(rho**-1)+ \"(Ohm m)^-1\"\n",
+    "print 'R_sh = {:.2f} +/- {:.2e}'.format(R_sh, R_shErr)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\rho = 6.19x10^{-3} \\Omega {cm}^{-1}$\n",
-    "\n",
-    "$\\sigma = 161.6 W K^{-1} {cm}^{-1}$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30.9369680111\n"
-     ]
-    }
-   ],
-   "source": [
-    "print R_sh"
+    "$\\rho = 6.19x10^{-3} \\Omega {cm}^{-1}$"
    ]
   },
   {
@@ -541,38 +510,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "I = np.arange(0.3,3.3,0.3)*10**-3\n",
-    "V1 = np.array([5.840, 11.659, 17.476, 23.187, 28.865, 34.573, 40.310, 46.035, 51.755, 57.490]) * 10**-3\n",
-    "V2 = np.array([-5.715, -11.389, -17.073, -22.764, -28.43, -34.112, -39.775, -45.430, -51.064, -56.734]) * 10**-3\n",
-    "V3 = np.array([5.813, 11.544, 17.303, 23.065, 28.827, 34.582, 40.330, 46.077, 51.813, 57.540]) * 10**-3\n",
-    "V4 = np.array([-5.983, -11.905, -17.818, -23.738, -29.640, -35.540, -41.427, -47.309, -53.191, -59.040]) * 10**-3\n",
-    "V = (V1 - V2 + V3 - V4)/4\n",
-    "B1 = np.array([100.5, 100.3, 100.3, 100.3, 100.3, 100.2, 100.2, 100.2, 100.2, 100.2]) * 10**-3\n",
-    "B2 = np.array([100.1, 99.8, 99.8, 99.8, 99.7, 99.8, 99.7, 99.7, 100.2, 100.2]) * 10**-3\n",
-    "B3 = np.array([99.9, 99.4, 99.4, 99.4, 99.4, 99.4, 100.3, 100.3, 100.3, 100.3]) * 10**-3\n",
-    "B4 = np.array([-101.2, -101.2, -101.3, -101.3, -101.4, -101.4, -101.4, -101.4, -101.3, -101.3]) * 10**-3\n",
-    "B = 100*10**-3\n",
-    "IB = I*B\n",
-    "VB1 = V1/B1\n",
-    "VB2 = V2/B2\n",
-    "VB3 = V3/B3\n",
-    "VB4 = V4/B4\n",
-    "VB = (VB1 - VB2 + VB3 - VB4)/4"
+    "I = np.arange(0.3,3.3,0.3)\n",
+    "B = np.arange(0.1, 0.35, 0.05)\n",
+    "Berr = .01*B\n",
+    "V = np.empty((5,4,10))\n",
+    "V[0] = [[5.840, 11.659, 17.476, 23.187, 28.865,\n",
+    "            34.573, 40.310, 46.035, 51.755, 57.490],\n",
+    "        [-5.715, -11.389, -17.073, -22.764, -28.430,\n",
+    "            -34.112, -39.775, -45.430, -51.064, -56.734],\n",
+    "        [5.813, 11.544, 17.303, 23.065, 28.827,\n",
+    "            34.582, 40.330, 46.077, 51.813, 57.540],\n",
+    "        [-5.983, -11.905, -17.818, -23.738, -29.640,\n",
+    "            -35.540, -41.427, -47.309, -53.191, -59.040]]\n",
+    "V[1] = [[8.498, 16.962, 25.412, 33.870, 42.303,\n",
+    "            50.737, 59.161, 67.555, 75.968, 84.365],\n",
+    "        [-8.453, -16.886, -25.311, -33.744, -42.163,\n",
+    "            -50.581, -58.986, -67.374, -75.767, -84.170],\n",
+    "        [8.818, 17.600, 26.370, 35.141, 43.899,\n",
+    "            52.663, 61.403, 70.141, 78.875, 87.620],\n",
+    "        [-8.770, -17.520, -26.262, -35.012, -43.738,\n",
+    "            -52.473, -63.894, -69.904, -78.610, -87.31]]\n",
+    "V[2] = [[11.224, 22.384, 33.530, 44.688, 55.820,\n",
+    "            66.954, 78.080, 89.181, 100.294, 111.413],\n",
+    "        [-11.155, -22.285, -33.404, -44.530, -55.641,\n",
+    "            -66.749, -77.853, -88.948, -100.039, -111.111],\n",
+    "        [12.094, 22.863, 34.208, 45.572, 56.915,\n",
+    "            68.246, 79.576, 90.90, 102.16, 113.50],\n",
+    "        [-11.361, -22.697, -34.028, -45.359, -56.670,\n",
+    "            -67.989, -79.286, -90.584, -101.87, -113.17]]\n",
+    "V[3] = [[13.707, 27.351, 40.988, 54.630, 68.257,\n",
+    "            81.874, 93.530, 109.071, 122.662, 136.24],\n",
+    "        [-13.648, -27.267, -40.879, -54.496, -68.094,\n",
+    "            -81.672, -95.220, -108.781, -122.347, -135.893],\n",
+    "        [14.710, 28.004, 41.910, 55.845, 69.775,\n",
+    "            83.670, 97.57, 111.46, 125.35, 139.70],\n",
+    "        [-13.811, -27.585, -41.355, -55.120, -68.866,\n",
+    "            -82.611, -96.34, -110.06, -123.76, -137.48]]\n",
+    "V[4] = [[15.928, 31.761, 47.584, 63.394, 79.182,\n",
+    "            94.978, 110.758, 126.520, 142.27, 158.02],\n",
+    "        [-15.833, -31.630, -47.412, -63.199, -78.975,\n",
+    "            -94.745, -110.487, -126.227, -141.94, -157.64],\n",
+    "        [16.221, 32.389, 48.543, 64.695, 80.823,\n",
+    "            96.946, 113.05, 129.13, 145.20, 161.28],\n",
+    "        [-16.146, -32.252, -48.342, -64.439, -80.521,\n",
+    "            -96.576, -112.64, -128.68, -144.70, -160.71]]\n",
+    "V_100=np.sum(V[0][1:3:2] - V[0][0:2:2], axis=0)/2\n",
+    "V_150=np.sum(V[1][1:3:2] - V[1][0:2:2], axis=0)/2\n",
+    "V_200=np.sum(V[2][1:3:2] - V[2][0:2:2], axis=0)/2\n",
+    "V_250=np.sum(V[3][1:3:2] - V[3][0:2:2], axis=0)/2\n",
+    "V_300=np.sum(V[4][1:3:2] - V[4][0:2:2], axis=0)/2\n",
+    "Vt = np.array([V_100, V_150, V_200, V_250, V_300]).T\n",
+    "Verr = .005"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transverse (Hall) Resistance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d74e5c5bc5e4aebbd1c8264ab39f4ea",
+       "model_id": "b1ccdfd30b0c4c16b8626da5056b435d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -599,81 +609,29 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0.00583775  0.01162425  0.0174175   0.0231885   0.0289405   0.03470175\n",
-      "  0.0404605   0.04621275  0.05195575  0.057701  ]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<matplotlib.legend.Legend at 0x105684210>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "fig1 = plt.figure()\n",
-    "ax = fig1.add_subplot(111)\n",
-    "ax.set_title('A plot of Current against Voltage, at fixed magnetic field strength')\n",
-    "#ax.legend('For fixed B=0.374mT')\n",
-    "ax.plot(V*1000, IB*1000)\n",
-    "ax.set_xlabel(\"Current x B-field strength IB / (A mT)\")\n",
-    "ax.set_ylabel(\"Voltage / (mV)\")\n",
-    "print V"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def y(x, A, B):\n",
-    "    return A*x + B\n",
-    "R_h_eff,foo = curve_fit(y, IB, V)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "R_h effective= 192.04914137 Ohm/Tesla\n"
-     ]
-    }
-   ],
-   "source": [
-    "print 'R_h effective= ' + str(R_h_eff) + ' Ohm/Tesla'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mu = 6.20775576006 m^2/Vs\n",
-      "n = 1.55898222439e+22 m^-3\n"
-     ]
-    }
-   ],
-   "source": [
-    "mu = R_h_eff/rho * t\n",
-    "print 'mu = ' + str(mu) + ' m^2/Vs'\n",
-    "n = (R_h_eff*t*1.67*10**-19)**-1\n",
-    "print 'n = ' + str(n) + ' m^-3'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$\\mu = 62078 {cm}^{2}V^{-1}s^{-1}$\n",
+    "fig2 = plt.figure()\n",
+    "ax2 = fig2.add_subplot(111)\n",
+    "ax2.set_title('A plot of Transverse Voltage against Current, \\n at various magnetic field strengths')\n",
     "\n",
-    "$n = 1.56x10^{16} {cm}^{-3}$"
+    "line_100, = ax2.plot(I, V_100, label=\"100mT\")\n",
+    "line_150, = ax2.plot(I, V_150, label=\"150mT\")\n",
+    "line_200, = ax2.plot(I, V_200, label=\"200mT\")\n",
+    "line_250, = ax2.plot(I, V_250, label=\"250mT\")\n",
+    "line_300, = ax2.plot(I, V_300, label=\"300mT\")\n",
+    "ax2.set_xlabel(\"Current I / (mA)\")\n",
+    "ax2.set_ylabel(\"Hall Output Voltage / (mV)\")\n",
+    "ax2.legend()"
    ]
   },
   {
@@ -683,8 +641,37 @@
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7778b6f595e14c2aa446330ecdc7f6cc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>FigureCanvasNbAgg</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
       "text/plain": [
-       "0.1"
+       "FigureCanvasNbAgg()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.legend.Legend at 0x105715ed0>"
       ]
      },
      "execution_count": 19,
@@ -693,7 +680,80 @@
     }
    ],
    "source": [
-    "B"
+    "fig3 = plt.figure()\n",
+    "ax3 = fig3.add_subplot(111)\n",
+    "ax3.set_title('A plot of Hall Resistance against magnetic field strength \\n under constant current supply')\n",
+    "\n",
+    "Vplot = Vt[0::3]\n",
+    "R = (Vplot.T/I[0::3]).T\n",
+    "RErr = R * np.sqrt((Verr/Vplot)**2)\n",
+    "line2_03 = ax3.errorbar(B, R[0], label=\"0.3mA\", yerr=RErr[0], xerr=Berr[0])\n",
+    "line2_12 = ax3.errorbar(B, R[1], label=\"1.2mA\", yerr=RErr[1], xerr=Berr[1])\n",
+    "line2_21 = ax3.errorbar(B, R[2], label=\"2.1mA\", yerr=RErr[2], xerr=Berr[2])\n",
+    "line2_30 = ax3.errorbar(B, R[3], label=\"3.0mA\", yerr=RErr[3], xerr=Berr[3])\n",
+    "ax3.set_xlabel(\"Magnetic induction (T)\")\n",
+    "ax3.set_ylabel(\"Hall Resistance / ($\\Omega$)\")\n",
+    "ax3.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "VB = Vt/B\n",
+    "VBerr = VB * np.sqrt((Verr/Vt)**2 + (Berr/B)**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def y(x, A, B):\n",
+    "    return A*x + B\n",
+    "fit_data = [curve_fit(y, I, v, sigma=e, absolute_sigma=True) for v,e in zip(VB.T,VBerr.T)]\n",
+    "grad = np.array([i[0][0] for i in fit_data])\n",
+    "intercept = np.array([i[0][1] for i in fit_data])\n",
+    "perr = np.array([np.sqrt(np.diag(i[1])) for i in fit_data])\n",
+    "#gradErr = np.sqrt( (VBerr/VB)**2 + (Berr/B)**2)\n",
+    "gradErr = np.sqrt((perr.T[0])**2 + (RhGeoErr*grad)**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rh = -1.840e+02 +/- 1.92e+01\n",
+      "u = -5.948 +/- 0.66\n",
+      "n = 1.629e+22 +/- 1.75e+21\n"
+     ]
+    }
+   ],
+   "source": [
+    "mu = grad/rho * t\n",
+    "muErr = mu * np.sqrt( (gradErr/grad)**2 + (rhoErr/rho)**2 + (deltat/t)**2  )\n",
+    "n = (grad*t*-1.67*10**-19)**-1\n",
+    "nErr = n * np.sqrt( (gradErr/grad)**2 + (deltat/t)**2)\n",
+    "print \"Rh = {:.3e} +/- {:.2e}\".format(np.average(grad), np.average(gradErr))\n",
+    "print \"u = {:.3f} +/- {:.2f}\".format(np.average(mu), np.average(np.abs(muErr)))\n",
+    "print \"n = {:.3e} +/- {:.2e}\".format(np.average(n), np.average(nErr))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\mu = 59,500 \\pm 6600 {cm}^{2}V^{-1}s^{-1}$\n",
+    "\n",
+    "$n = 1.63 \\pm 0.18*10^{16} {cm}^{-3}$"
    ]
   }
  ],
