Changed matplotlib to notebook

--- a/p-type GaAs.ipynb
+++ b/p-type GaAs.ipynb
@@ -15,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib ipympl"
+    "%matplotlib notebook"
    ]
   },
   {
