--- a/n-type GaAs.ipynb
+++ b/n-type GaAs.ipynb
@@ -14,11 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib ipympl"
+    "%matplotlib notebook"
    ]
   },
   {
